# notes2latex

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Header.tsx
frontend/src/lib/: api.ts  hooks.ts  settings.ts  types.ts
frontend/src/pages/: HomePage.tsx  JobPage.tsx  SettingsPage.tsx
src/: app.py
src/agent/: config.py  graph.py  progress.py  state.py
src/agent/prompts/: loader.py  preamble.tex  transcribe.md
src/agent/utils/: text.py
src/api/v1/agent/: models.py  routes.py
src/cli/: cli.py
src/clients/llm/: client.py
src/compiler/: compiler.py
src/core/: config.py  logger.py
src/db/: engine.py  models.py  repository.py
src/document/: preprocessing.py  processing.py
src/notes2latex/: __init__.py  cli.py  compiler.py  llm.py  pipeline.py  preprocessor.py
src/notes2latex/prompts/: fix_errors.md
tests/: test_compiler.py  test_pipeline.py
tests/agent/: test_graph.py
tests/compiler/: test_compiler.py
